uploading new cv

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "porfolio",
+  "homepage": "https://panayar.github.io/Web-Porfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,11 +12,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typewriter-effect": "^2.18.2",
     "react-icons": "^4.3.1",
     "react-indiana-drag-scroll": "^2.1.0",
     "react-parallax-tilt": "^1.6.5",
+    "react-scripts": "5.0.1",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -23,6 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
