--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
     "react-indiana-drag-scroll": "^2.1.0",
+    "react-on-screen": "^2.1.1",
     "react-parallax-tilt": "^1.6.5",
     "react-scripts": "5.0.1",
     "typewriter-effect": "^2.18.2",
