--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "porfolio",
-  "homepage": "https://panayar.github.io/Web-Porfolio",
+  "homepage": "https://paulaanayar.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
